--- a/frontend/src/Orders/style.css
+++ b/frontend/src/Orders/style.css
@@ -188,6 +188,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+    margin-top: 20px;
   }
   
   .order-summary-content {
